<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:id="@+id/content2"
       android:layout_width="match_parent"
       android:layout_height="390dp"> 
    
    	<fragment 
		          android:id="@+id/map"
		          android:layout_width="300dp"
		          android:layout_height="250dp"
		          android:layout_centerHorizontal="true"
		          android:name="com.google.android.gms.maps.SupportMapFragment"/>
		   
		   <TextView  android:id="@+id/selected_header"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/type_prompt"
	    		android:layout_below="@+id/map"
        		android:textSize="20sp"
        		android:padding="20dp"/>
		   
		  <TextView  android:id="@+id/label_duration"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/activity_duration"
	    		android:layout_below="@+id/selected_header"
        		android:textSize="12sp"
        		android:paddingLeft="20dp"/>
		  

		  <TextView  android:id="@+id/duration"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/zero_duration"
	    		android:layout_below="@+id/selected_header"
	    		android:layout_toRightOf="@+id/label_duration"
        		android:textSize="12sp"
        		android:paddingLeft="60dp" />
		  
		  <TextView  android:id="@+id/label_distance"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/activity_distance"
	    		android:layout_below="@+id/label_duration"
        		android:textSize="12sp"
        		android:paddingLeft="20dp" />
		  
		  <TextView  android:id="@+id/distance"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/zero_distance"
	    		android:layout_below="@+id/label_duration"
	    		android:layout_toRightOf="@+id/label_distance"
        		android:textSize="12sp"
        		android:paddingLeft="40dp" />
		  
		  <TextView  android:id="@+id/label_speed"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/activity_speed"
	    		android:layout_below="@+id/label_distance"
        		android:textSize="12sp"
        		android:paddingLeft="20dp" />
		  
		  <TextView android:id="@+id/speed"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/zero_speed"
	    		android:layout_below="@+id/label_distance"
	    		android:layout_toRightOf="@+id/label_speed"
        		android:textSize="12sp"
        		android:paddingLeft="54dp" />
		  
		  </RelativeLayout>
		  
       <RelativeLayout android:id="@+id/buttons2"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/content2"
    android:layout_marginBottom="10dp">

	   <Button
	       android:id="@+id/button_Delete"
	       android:layout_width="100dp"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_alignParentTop="true"
	       android:layout_marginLeft="50dp"
	       android:padding="10dp"
	       android:paddingLeft="20dp"
	       android:text="@string/button_delete"
	       android:textSize="12sp" />

	   <Button
	       android:id="@+id/button_Back"
	       android:layout_width="100dp"
	       android:layout_height="wrap_content"
	       android:layout_alignParentTop="true"
	       android:layout_marginLeft="30dp"
	       android:layout_toRightOf="@+id/button_Delete"
	       android:padding="10dp"
	       android:paddingLeft="80dp"
	       android:text="@string/button_back"
	       android:textSize="12sp" />
	   
	   </RelativeLayout>

</RelativeLayout>
