<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="390dp"> 
    
	   <RelativeLayout android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="visible"
	    android:id="@+id/layout1" >
	    
	       <TextView   android:id="@+id/type"  
	           	android:layout_width="match_parent"
	    		android:layout_height="match_parent"
	    		android:text="@string/type_prompt"
        		android:textSize="20sp"
        		android:paddingLeft="10dp"
        		android:padding="20dp"/>
	       
	       	<Spinner
		       android:id="@+id/type_spinner"
		       android:layout_width="250dp"
		       android:layout_height="wrap_content"
		       android:layout_alignParentLeft="true"
		       android:layout_alignParentTop="true"
		       android:layout_marginTop="60dp"
		       android:padding="20dp"
		       android:entries="@array/type_array"
		       android:prompt="@string/type_prompt" />
	       
	   </RelativeLayout>
    
	   <RelativeLayout android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="invisible"
	    android:id="@+id/layout2"
	    >
		   <fragment 
		          android:id="@+id/map"
		          android:layout_width="300dp"
		          android:layout_height="250dp"
		          android:layout_centerHorizontal="true"
		          android:name="com.google.android.gms.maps.SupportMapFragment"/>
		   
		   <TextView  android:id="@+id/selected_header"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/type_prompt"
	    		android:layout_below="@+id/map"
        		android:textSize="20sp"
        		android:padding="20dp"/>
		   
		  <TextView  android:id="@+id/label_duration"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/activity_duration"
	    		android:layout_below="@+id/selected_header"
        		android:textSize="12sp"
        		android:paddingLeft="20dp"/>
		  
		  <TextView  android:id="@+id/duration"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/zero_duration"
	    		android:layout_below="@+id/selected_header"
	    		android:layout_toRightOf="@+id/label_duration"
        		android:textSize="12sp"
        		android:paddingLeft="60dp" />
		  
		  <TextView  android:id="@+id/label_distance"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/activity_distance"
	    		android:layout_below="@+id/label_duration"
        		android:textSize="12sp"
        		android:paddingLeft="20dp" />
		  
		  <TextView  android:id="@+id/distance"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/zero_distance"
	    		android:layout_below="@+id/label_duration"
	    		android:layout_toRightOf="@+id/label_distance"
        		android:textSize="12sp"
        		android:paddingLeft="40dp" />
		  
		  <TextView  android:id="@+id/label_speed"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/activity_speed"
	    		android:layout_below="@+id/label_distance"
        		android:textSize="12sp"
        		android:paddingLeft="20dp" />
		  
		  <TextView android:id="@+id/speed"  
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/zero_speed"
	    		android:layout_below="@+id/label_distance"
	    		android:layout_toRightOf="@+id/label_speed"
        		android:textSize="12sp"
        		android:paddingLeft="54dp" />


	   </RelativeLayout>
   
   </RelativeLayout>

   <RelativeLayout android:id="@+id/buttons"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/content"
    android:layout_marginBottom="10dp">
	   

	   
	   <Button android:id="@+id/button_Start"
	    	android:layout_width="80dp"
	        android:layout_height="40dp"
	        android:layout_centerHorizontal="true"
	        android:textSize="12sp"
	        android:text="@string/button_start"
	        android:padding="10dp" />
	   
	   <Button android:id="@+id/button_Save"
	    	android:layout_width="80dp"
	        android:layout_height="40dp"
	        android:textSize="12sp"
	        android:layout_toLeftOf="@+id/button_Start"
	        android:text="@string/button_proceed"
	        android:padding="10dp" />
	   
	   <Button android:id="@+id/button_Cancel"
	    	android:layout_width="80dp"
	        android:layout_height="40dp"
	        android:textSize="12sp"
	        android:layout_toRightOf="@+id/button_Start"
	        android:text="@string/button_cancel"
	        android:padding="10dp" />

   </RelativeLayout>
</RelativeLayout>
